# motd

./: Cargo.toml  Makefile
src/: main.rs
